# Bank_Project

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
bank_widget/: main.py  pyproject.toml
bank_widget/src/: masks.py  processing.py  widget.py
bank_widget/tests/: test_masks.py  test_processing.py  test_widget.py
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  pd_operations.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_pd_operations.py  test_processing.py  test_utils.py  test_widget.py
