[tool.poetry]
name = "bank_widget"
version = "0.1.0"
description = ""
authors = ["Sukharev Alexandr <suxarev.a86@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^6.0.0"
mypy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_configs = true
exclude = 'venv'